excluded faq and asdfjkl, also CSS hax to prevent nav/banner overlap

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -83,13 +83,21 @@ hr.small {
   }
   .navbar-custom .nav li a {
     color: white;
-    padding: 20px;
+    padding: 20px 15px;
   }
   .navbar-custom .nav li a:hover,
   .navbar-custom .nav li a:focus {
     color: rgba(255, 255, 255, 0.8);
   }
 }
+
+/*hax*/
+@media only screen and (max-width: 857px) {
+  .navbar-custom .nav li a {
+    padding: 0px 15px;
+  }
+}
+
 @media only screen and (min-width: 1170px) {
   .navbar-custom {
     -webkit-transition: background-color 0.3s;
